--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,25 @@ header {
   color: var(--while-color);
   position: relative;
 }
+.header__nav-item--qr::before {
+  content: "";
+  height: 1.3rem;
+  border: 0.1rem solid hsla(0, 0%, 100%, 0.22);
+  position: absolute;
+  left: 0;
+}
+
+.header__nav-item--qr::after {
+  content: "";
+  height: 1.3rem;
+  border: 0.1rem solid hsla(0, 0%, 100%, 0.22);
+  position: absolute;
+  right: 0;
+}
+
+.header__nav-item--qr:hover .header__nav-qr {
+  display: flex;
+}
 
 .header__nav-item-right {
   padding: 0 1rem;
@@ -31,10 +50,6 @@ header {
   color: var(--while-color);
   text-decoration: none;
   cursor: pointer;
-}
-
-.header__nav-item--qr:hover .header__nav-qr {
-  display: flex;
 }
 
 .header__nav-item-link:hover {
@@ -62,19 +77,22 @@ header {
   position: absolute;
   top: -7%;
   width: 100%;
-  height: 100%;
+  height: 1.6rem;
   display: flex;
-
 }
 
 .header__nav-app {
-  margin: 0 1.4rem;
+  margin: 0 1.4rem 1.4rem;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .header__nav-app-img {
-  margin-top: 0.4rem;
+  margin-top: 1rem;
   height: 1.6rem;
+}
+
+.header__nav-app-img--smaller{
+  height: 1.4rem;
 }
