--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
   --while-color: #fff;
   --black-color: #000;
   --text-color: #333;
+  --grey-color: #888;
 }
 
 /* shopee customize responsive */
