--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,7 +128,6 @@ header {
   right: 0;
   display: none;
   flex-direction: column;
-  padding: 0 0.6rem;
   border-radius: 2px;
   border-top: 0px;
   box-shadow: rgb(0 0 0 / 20%) 0px 0.0625rem 3.125rem 0px;
@@ -158,7 +157,7 @@ header {
 }
 
 .header__notify-title {
-  padding: 1.3rem 0;
+  padding: 1.3rem 0.6rem;
   opacity: 0.25;
   font-size: 1.4rem;
 }
@@ -185,6 +184,12 @@ header {
   padding: 0.6rem 0 1.8rem;
 }
 
+.header__notify-user,
+.header__notify-news {
+  padding: 0 0.6rem;
+  background-color: #f9dcd9;
+}
+
 .header__notify-user .header__notify-link p:first-child {
   color: var(--text-color);
 }
@@ -195,6 +200,10 @@ header {
 
 .header__notify-news p {
   display: inline;
+}
+
+.header__notify-info {
+  margin-left: 0.6rem;
 }
 
 .header__notify-showAll {
