--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -38,3 +38,14 @@
   }
 }
 
+@keyframes headerNotifyGrowing {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
