--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,7 +179,7 @@ header {
   padding: 0.6rem 0 1.8rem;
 }
 
-.header__notify-news{
+.header__notify-news {
   padding: 0.6rem 0.6rem;
 }
 
@@ -281,14 +281,23 @@ header {
 .header__search {
   padding: 1.6rem 0 1rem;
   display: flex;
+  align-items: center;
 }
 
-.header__logo img {
+.header__logo-link {
+  flex-basis: 20rem;
+}
+
+.header__logo-link img {
   display: block;
   height: 5rem;
   color: #fff;
   padding-right: 4rem;
-  margin-top: -0.4rem;
+  margin-top: -1.3rem;
+}
+
+.header__search-content {
+  flex: 1;
 }
 
 .header__search-wrapper {
@@ -296,29 +305,34 @@ header {
   padding-left: 0.6rem;
   background-color: var(--while-color);
   border-radius: 0.2rem;
+  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 9%);
 }
 
 .header__search-input {
-  width: 84rem;
+  width: 100%;
   height: 3.8rem;
   border: none;
   outline: none;
 }
 
 .header__search-input::placeholder {
-  opacity: 0.5;
+  opacity: 0.7;
+  font-size: 1.4rem;
 }
 
 .header__search-icon {
   width: 5.9rem;
   height: 3.3rem;
-  display: inline;
   position: absolute;
   right: 0.3rem;
   top: 0.3rem;
   text-align: center;
   background-color: #fb5533;
   border-radius: 0.2rem;
+}
+
+.header__search-icon:hover{
+  opacity: 0.9;
 }
 
 .header__search-icon i {
@@ -348,7 +362,7 @@ header {
 }
 
 .header__cart {
-  width: 13.8rem;
+  flex-basis: 13.8rem;
   height: 5.9rem;
   text-align: center;
   display: flex;
