header search history, cart-list

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,8 @@
   --black-color: #000;
   --text-color: #333;
   --grey-color: #888;
+  --lighter-grey-color: #f8f8f8;
+  --primary-color:#ee4d2d;
 }
 
 /* shopee customize responsive */
