--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -83,7 +83,9 @@ summary,
 time,
 mark,
 audio,
-video {
+video, 
+select,
+option {
   margin: 0;
   padding: 0;
   border: 0;
@@ -133,23 +135,22 @@ img {
 }
 
 *,
-*::before
-*::after{
-    box-sizing: inherit;
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
-html{
-    font-family: "Montserrat", sans-serif;
-    font-size: 10px;
+html {
+  font-family: "Montserrat", sans-serif;
+  font-size: 10px;
 
-    width: 100%;
-    height: 100%;
-
-    box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
-button{
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
-    cursor: pointer;
+button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  cursor: pointer;
 }
