--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -10,49 +10,37 @@
 
 /* shopee customize responsive */
 .grid {
-  width: 120rem;
   max-width: 100%;
   margin: 0 auto;
-}
-
-.grid-1000 {
-  width: 100rem;
-}
-
-.grid--fullheight {
-  height: 100%;
-}
-
-.grid__fullwidth {
-  width: 100%;
 }
 
 .grid__row {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
 }
 
-.grid__row--1200 {
-  margin-left: -1.2rem;
-  margin-right: -1.2rem;
+.grid__row--padt3 {
   padding-top: 3rem;
-}
-
-.grid__row--1000 {
-  margin-left: -1rem;
-  margin-right: -1rem;
 }
 
 /* test */
 .grid__col-2x {
-  padding-left: 1.2rem;
-  padding-right: 1.2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   flex-basis: 16.6667%;
 }
 
+.grid__col-2c4x {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  flex-basis: 20%;
+}
+
 .grid__col-10x {
-  padding-left: 1.2rem;
-  padding-right: 1.2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   flex-basis: 83.3333%;
 }
 
@@ -66,6 +54,34 @@
   border-right: 0.2rem solid hsla(0, 0%, 100%, 0.22);
 }
 
+.btn {
+  padding: 0 1.5rem;
+  background-color: var(--while-color);
+  border: none;
+  text-decoration: none;
+  border-radius: 0.2rem;
+  color: var(--text-color);
+  outline: none;
+}
+
+.btn--primary {
+  background-color: var(--primary-color);
+  color: var(--while-color);
+}
+
+/* Select input */
+.select-input {
+  margin-left: 1.3rem;
+  padding: 0 1.5rem;
+  min-width: 15.4rem;
+  background-color: var(--while-color);
+  border: none;
+  text-decoration: none;
+  border-radius: 0.2rem;
+  color: var(--text-color);
+  position: relative;
+  cursor: pointer;
+}
 @keyframes fadeIn {
   from {
     opacity: 0;
