--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -82,6 +82,50 @@
   position: relative;
   cursor: pointer;
 }
+
+/* Pagination */
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination-item {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  color:var(--grey-color);
+  font-size: 2rem;
+  border-radius: 0.2rem;
+}
+
+.pagination-item:first-child {
+  font-size: 1.6rem;
+  margin-left: 0;
+}
+
+.pagination-item:last-child {
+  font-size: 1.6rem;
+  margin-right: 0;
+}
+
+.pagination-item--active {
+  background-color: var(--primary-color);
+  color: var(--while-color);
+}
+
+.pagination-item--active:hover {
+  opacity: 0.9;
+}
+
+.pagination-item__link {
+  display:block;
+  min-width: 4rem;
+  line-height: 3rem;
+  width: 100%;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
