--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -658,13 +658,20 @@ header {
   line-height: 3.2rem;
   padding-left: 0.8rem;
 }
-.app__category-title {
+
+.app__category-item {
+  color: var(--text-color);
+  /* transition: right linear 0.1s;
+  right: 0rem; */
+}
+
+.app__category-item--active {
   color: var(--primary-color);
-  display: inline-block;
   position: relative;
 }
 
-.app__title-icon {
+
+.app__item-icon {
   width: 0;
   height: 0;
   border-top: 0.4rem solid transparent;
@@ -675,12 +682,6 @@ header {
   top: 50%;
   left: -0.7rem;
   transform: translateY(-50%);
-}
-
-.app__category-item {
-  color: var(--text-color);
-  /* transition: right linear 0.1s;
-  right: 0rem; */
 }
 
 .app__category-item:hover {
@@ -708,6 +709,11 @@ header {
   flex: 1;
 }
 
+.btn--active {
+  background-color: var(--primary-color);
+  color: var(--while-color);
+}
+
 .app__filter-item {
   margin-left: 1.3rem;
 }
@@ -719,7 +725,7 @@ header {
 
 .app__input-icon {
   position: absolute;
-  right: 1.5rem;
+  right: 0.5rem;
 }
 
 .app__input-list {
@@ -977,12 +983,12 @@ header {
   font-size: 1.1rem;
 }
 
-.footer__grid{
+.footer__grid {
   border-top: 1px solid #f5f5f5;
   /* border-bottom: 1px solid #737373; */
 }
 
-.footer__ads{
+.footer__ads {
   height: 12rem;
   border-top: 3px solid var(--primary-color);
 }
