--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -85,13 +85,14 @@
   display: flex;
   justify-content: center;
 }
-
+.pagination-number,
 .pagination-item {
   margin-left: 1rem;
   margin-right: 1rem;
   color:var(--grey-color);
   font-size: 2rem;
   border-radius: 0.2rem;
+  cursor: pointer;
 }
 
 .pagination-item:first-child {
@@ -104,12 +105,12 @@
   margin-right: 0;
 }
 
-.pagination-item--active {
+.pagination-number--active {
   background-color: var(--primary-color);
   color: var(--while-color);
 }
 
-.pagination-item--active:hover {
+.pagination-number--active:hover {
   opacity: 0.9;
 }
 
