--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -95,6 +95,10 @@
   cursor: pointer;
 }
 
+.pagination-item--non-click{
+  cursor: default;
+}
+
 .pagination-item:first-child {
   font-size: 1.6rem;
   margin-left: 0;
