--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -809,7 +809,7 @@ header {
 .app__pre-page--disabled,
 .app__next-page--disabled {
   background-color: #f9f9f9;
-  cursor:default;
+  cursor: default;
 }
 
 .app__pre-page--disabled .app__pre-icon {
@@ -1004,6 +1004,10 @@ header {
   font-size: 1.1rem;
 }
 
+.footer{
+  background-color: #fbfbfb;
+}
+
 .footer__grid {
   border-top: 1px solid #f5f5f5;
   /* border-bottom: 1px solid #737373; */
@@ -1012,6 +1016,7 @@ header {
 .footer__ads {
   height: 12rem;
   border-top: 3px solid var(--primary-color);
+  background-color:var(--while-color);
 }
 
 .pagination--mtb3 {
@@ -1041,6 +1046,10 @@ header {
   color: inherit;
   display: inline-flex;
   align-items: center;
+}
+
+.footer__item-link:hover {
+  color: var(--primary-color);
 }
 
 .footer__app-wrapper {
@@ -1075,20 +1084,140 @@ header {
 .footer__list-shipping {
   display: flex;
   flex-wrap: wrap;
-  padding-right: 4rem;
+  margin-right: 4rem;
+  margin-bottom: 2rem;
 }
 
 .footer__payment-item {
+  width: 5.5rem;
+  height: 2.9rem;
   margin-bottom: 0.5rem;
   margin-right: 0.5rem;
+  text-align: center;
   overflow: hidden;
 }
 
 .footer__payment-backround {
+  display: inline-block;
+  background-image: url(../img/payment&shipping.png);
+}
+
+.footer__payment-visa {
   width: 5.5rem;
   height: 1.8rem;
-  background-image: url(../img/payment&shipping.png);
   background-position: 77.55102040816327% 28.74251497005988%;
+}
+
+.footer__payment-master {
+  width: 5.5rem;
+  height: 2.9rem;
+  background-size: 1258.1818181818182% 637.9310344827586%;
+  background-position: 49.60753532182104% 6.410256410256411%;
+}
+
+.footer__payment-jcb {
+  width: 5.5rem;
+  height: 2.3rem;
+  background-size: 1258.1818181818182% 804.3478260869565%;
+  background-position: 41.444270015698585% 36.41975308641975%;
+}
+
+.footer__payment-amex {
+  width: 5.5rem;
+  height: 2.4rem;
+  background-size: 1384% 840.9090909090909%;
+  background-position: 12.461059190031152% 6.134969325153374%;
+}
+
+.footer__payment-cod {
+  width: 5rem;
+  height: 2.9rem;
+  background-size: 1384% 637.9310344827586%;
+  background-position: 65.26479750778816% 55.12820512820513%;
+}
+
+.footer__payment-installment {
+  width: 5.5rem;
+  height: 2.9rem;
+  background-size: 1258.1818181818182% 637.9310344827586%;
+  background-position: 76.76609105180533% 55.12820512820513%;
+}
+
+.footer__payment-airpay {
+  width: 2.3rem;
+  height: 2.9rem;
+  background-size: 1730% 355.7692307692308%;
+  background-position: 1.5337423312883436% 7.518796992481203%;
+}
+
+.footer__payment-express {
+  width: 5.5rem;
+  height: 1rem;
+  background-size: 623.4234234234234% 1027.7777777777778%;
+  background-position: 67.29776247848537% 5.9880239520958085%;
+}
+
+.footer__payment-ghtk {
+  width: 5.5rem;
+  height: 1.8rem;
+  background-size: 1258.1818181818182% 1027.7777777777778%;
+  background-position: 21.50706436420722% 61.07784431137725%;
+}
+
+.footer__payment-ghn {
+  width: 5.5rem;
+  height: 2.9rem;
+  background-size: 1258.1818181818182% 637.9310344827586%;
+  background-position: 9.733124018838305% 65.38461538461539%;
+}
+
+.footer__payment-viettel {
+  width: 5.5rem;
+  height: 1.8rem;
+  background-size: 1258.1818181818182% 1027.7777777777778%;
+  background-position: 65.77708006279435% 28.74251497005988%;
+}
+
+.footer__payment-vnpost {
+  width: 5.5rem;
+  height: 2.7rem;
+  background-size: 1258.1818181818182% 685.1851851851852%;
+  background-position: 100% 6.329113924050633%;
+}
+
+.footer__payment-jnt {
+  width: 5.5rem;
+  height: 1.6rem;
+  background-size: 1258.1818181818182% 1156.25%;
+  background-position: 81.94662480376766% 5.9171597633136095%;
+}
+
+.footer__payment-grab {
+  width: 5.5rem;
+  height: 1.5rem;
+  background-size: 516.4179104477612% 637.9310344827586%;
+  background-position: 29.032258064516128% 6.410256410256411%;
+}
+
+.footer__payment-now {
+  width: 3.8rem;
+  height: 3.2rem;
+  background-size: 865% 231.25%;
+  background-position: 51.63398692810458% 100%;
+}
+
+.footer__payment-ninja {
+  width: 5rem;
+  height: 2rem;
+  background-size: 1153.3333333333333% 711.5384615384615%;
+  background-position: 53.639240506329116% 37.106918238993714%;
+}
+
+.footer__payment-best {
+  width: 5.5rem;
+  height: 2.2rem;
+  background-size: 961.1111111111111% 616.6666666666666%;
+  background-position: 11.290322580645162% 33.54838709677419%;
 }
 
 .footer__lisence {
@@ -1096,4 +1225,3 @@ header {
   font-size: 1.3rem;
   color: var(--text-color);
 }
-
